
Package: R.utils
================

Version: 1.30.1 [2014-04-06]
o WORKAROUND: moveInSearchPath() redirects any messages that
  base::attach() (incorrectly?) sends to stdout to stderr.


Version: 1.30.0 [2014-04-06]
o Vectorized detachPackage(), getAbsolutePath(), getRelativePath(),
  isAbsolutePath(), isDirectory(), isFile(), isOpen(),
  isPackageInstalled(), touchFile() and toUrl(). Added package system
  tests for several of them.  For backward compatibility,
  getAbsolutePath(), getRelativePath(), isAbsolutePath(), isFile() and
  isDirectory() treats an empty vector of path/pathnames equal to ".".
  However, in a future version, empty results will returned by these too.
o BUG FIX: toCamelCase(character(0L)) gave an error.


Version: 1.29.11 [2014-04-02]
o BUG FIX: str() and summary() for Verbose did not acknowledge
  argument 'level'.


Version: 1.29.10 [2014-02-28]
o DOCUMENTATION: Added a help section on privileges required on Windows
  in order for createLink() to work.


Version: 1.29.9 [2014-02-24]
o ROBUSTNESS: Added a package redundancy test for a bug occurring in
  R.oo (< 1.18.0) causing R to core dump (with "Error: SET_VECTOR_ELT()
  can only be applied to a 'list', not a 'integer'") or gives an error
  (with "Error: not a weak reference") under certain conditions when a
  registered finalizer tried to reload R.oo if it was unloaded.  This
  occurred only on R prior to R 3.0.2 patched (2014-02-21 r65057).  Also,
  the 'methods' package needs to be attached, so it is still not clear
  what is the true cause of the bug.  In R.oo (>= 1.18.0) this bug is
  avoided.


Version: 1.29.8 [2014-01-27]
o BUG FIX: Although eget(K=2, cmdArgs=TRUE) would use command-line
  argument 'K=1' as the default (instead of K=2), calling
  eget("K", 2, cmdArgs=TRUE) would not.
o BUG FIX: commandArgs(excludeReserved=TRUE) failed to drop reserved
  arguments of type --<key>=<value>, e.g. --encoding=ASCII.


Version: 1.29.7 [2014-01-27]